[package]
name = "drawer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.22", features = ["fast-math", "debug-glam-assert"] }
minifb = { version = "0.23", default-features = false, features = ["x11"] }
fastrand = "1.8"
anyhow = "1.0.66"

[profile.dev.package."*"]
opt-level=3